--- a/flask_app/templates/politica.html
+++ b/flask_app/templates/politica.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Privacy Policy for EmprendeAdvisor</title>
 
@@ -10,158 +9,173 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex" />
     <style>
-        body {
-            background: #fff;
-            color: #000;
-            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-            font-size: 16px;
-            line-height: 28px;
-            margin: 0;
-        }
-        
-        h1 {
-            font-size: 40px;
-            line-height: 60px;
-        }
-        
-        h1,
-        h2 {
-            font-weight: 700;
-        }
-        
-        h2 {
-            font-size: 32px;
-            line-height: 48px;
-        }
-        
-        h3 {
-            font-size: 24px;
-            line-height: 36px;
-        }
-        
-        h3,
-        h4 {
-            font-weight: 700;
-        }
-        
-        h4 {
-            font-size: 20px;
-            line-height: 30px;
-        }
-        
-        h5,
-        h6 {
-            font-size: 16px;
-            line-height: 24px;
-            font-weight: 700;
-        }
-        
+      body {
+        background: #fff;
+        color: #000;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 16px;
+        line-height: 28px;
+        margin: 0;
+      }
+
+      h1 {
+        font-size: 40px;
+        line-height: 60px;
+      }
+
+      h1,
+      h2 {
+        font-weight: 700;
+      }
+
+      h2 {
+        font-size: 32px;
+        line-height: 48px;
+      }
+
+      h3 {
+        font-size: 24px;
+        line-height: 36px;
+      }
+
+      h3,
+      h4 {
+        font-weight: 700;
+      }
+
+      h4 {
+        font-size: 20px;
+        line-height: 30px;
+      }
+
+      h5,
+      h6 {
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 700;
+      }
+
+      a {
+        text-decoration: none;
+        cursor: pointer;
+        color: #000;
+      }
+
+      a:hover,
+      a[rel~="nofollow"] {
+        text-decoration: underline;
+      }
+
+      a[rel~="nofollow"] {
+        color: #0452a5;
+      }
+
+      a[rel~="nofollow"]:hover {
+        text-decoration: none;
+      }
+
+      .visible {
+        display: block;
+      }
+
+      .hidden {
+        display: none;
+      }
+
+      .page {
+        width: 100%;
+      }
+
+      .container {
+        position: relative;
+        width: 90%;
+        max-width: 1024px;
+        margin: 0 auto;
+      }
+
+      .header {
+        background: #0452a5;
+        color: #fff;
+        padding: 16px 0;
+      }
+
+      .header .title {
+        font-size: 24px;
+        line-height: 36px;
+        font-weight: 700;
+        margin: 0;
+      }
+
+      .content {
+        padding-bottom: 32px;
+      }
+
+      .translations-list-container {
+        background: #253246;
+        color: #fff;
+        padding: 8px 0 0;
+        margin: 0 0 32px;
+      }
+
+      .translations-list-container .translations-list {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+
+      .translations-list-container .translations-list .translations-list-item {
+        display: inline-block;
+        padding: 0;
+        margin: 0 8px 8px 0;
+        color: #fff;
+      }
+
+      .translations-list-container
+        .translations-list
+        .translations-list-item
         a {
-            text-decoration: none;
-            cursor: pointer;
-            color: #000;
-        }
-        
-        a:hover,
-        a[rel~="nofollow"] {
-            text-decoration: underline;
-        }
-        
-        a[rel~="nofollow"] {
-            color: #0452a5;
-        }
-        
-        a[rel~="nofollow"]:hover {
-            text-decoration: none;
-        }
-        
-        .visible {
-            display: block;
-        }
-        
-        .hidden {
-            display: none;
-        }
-        
-        .page {
-            width: 100%;
-        }
-        
-        .container {
-            position: relative;
-            width: 90%;
-            max-width: 1024px;
-            margin: 0 auto;
-        }
-        
-        .header {
-            background: #0452a5;
-            color: #fff;
-            padding: 16px 0;
-        }
-        
-        .header .title {
-            font-size: 24px;
-            line-height: 36px;
-            font-weight: 700;
-            margin: 0;
-        }
-        
-        .content {
-            padding-bottom: 32px;
-        }
-        
-        .translations-list-container {
-            background: #253246;
-            color: #fff;
-            padding: 8px 0 0;
-            margin: 0 0 32px;
-        }
-        
-        .translations-list-container .translations-list {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-        }
-        
-        .translations-list-container .translations-list .translations-list-item {
-            display: inline-block;
-            padding: 0;
-            margin: 0 8px 8px 0;
-            color: #fff;
-        }
-        
-        .translations-list-container .translations-list .translations-list-item a {
-            display: inline-block;
-            color: #fff;
-            padding: 4px 8px;
-        }
-        
-        .translations-list-container .translations-list .translations-list-item a.active {
-            background: #334055;
-        }
+        display: inline-block;
+        color: #fff;
+        padding: 4px 8px;
+      }
+
+      .translations-list-container
+        .translations-list
+        .translations-list-item
+        a.active {
+        background: #334055;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="page">
-        <div class="header">
-            <div class="container">
-                <p class="title">Privacy Policy for EmprendeAdvisor</p>
-            </div>
+      <div class="header">
+        <div class="container">
+          <p class="title">Privacy Policy for EmprendeAdvisor</p>
         </div>
+      </div>
 
-        <div class="translations-content-container">
-            <div class="container">
-                <div class="tab-content translations-content-item en visible" id="en">
-                    <h1>Privacy Policy</h1>
-                    <p>Last updated: February 02, 2022</p>
-                    <p>
-                        This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.
-                    </p>
-                    <p>
-                        We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the
-                        <a href="https://www.termsfeed.com/blog/sample-privacy-policy-template/" target="_blank">Privacy Policy Template</a
+      <div class="translations-content-container">
+        <div class="container">
+          <div class="tab-content translations-content-item en visible" id="en">
+            <h1>Privacy Policy</h1>
+            <p>Last updated: February 02, 2022</p>
+            <p>
+              This Privacy Policy describes Our policies and procedures on the
+              collection, use and disclosure of Your information when You use
+              the Service and tells You about Your privacy rights and how the
+              law protects You.
+            </p>
+            <p>
+              We use Your Personal data to provide and improve the Service. By
+              using the Service, You agree to the collection and use of
+              information in accordance with this Privacy Policy. This Privacy
+              Policy has been created with the help of the
+              <a
+                href="https://www.termsfeed.com/blog/sample-privacy-policy-template/"
+                target="_blank"
+                >Privacy Policy Template</a
               >.
             </p>
             <h1>Interpretation and Definitions</h1>
@@ -238,7 +252,7 @@
                   <strong>Website</strong> refers to EmprendeAdvisor, accessible
                   from
                   <a
-                    href="http://18.205.29.39:5001"
+                    href="https://www.emprendeadvisor.com"
                     rel="external nofollow noopener"
                     target="_blank"
                     >emprendeadvisor.com</a
