--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="EmprendeAdvisor" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.emprendeadvisor.com" />
-    <meta property="og:image" content="{{ url_for('static', filename='images/android-chrome-192x192.png') }}" />
+    <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/8bb36b9b-001b-47ae-b410-427141d544d3.png" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
