--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -15,7 +15,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.emprendeadvisor.com" />
     <meta property="og:description" content="¡Encuentra el emprendimiento que estabas buscando!" />
-    <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/8bb36b9b-001b-47ae-b410-427141d544d3.png" />
+    <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/5246c329-2c70-4185-b4aa-2433ee9d7e59.png" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:width" content="1200" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> {% assets "scss_all" %}
     <link rel=stylesheet type=text/css href="{{
