--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -14,7 +14,10 @@
     <meta property="og:title" content="EmprendeAdvisor" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.emprendeadvisor.com" />
-    <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/8bb36b9b-001b-47ae-b410-427141d544d3.png" />
+    <meta property="og:description" content="¡Encuentra el emprendimiento que estabas buscando!" />
+    <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/5246c329-2c70-4185-b4aa-2433ee9d7e59.png" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:width" content="1200" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
