--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -13,7 +13,7 @@
 
     <meta property="og:title" content="EmprendeAdvisor" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.emprendeadvisor.com" />
+    <meta property="og:url" content="http://18.205.29.39:5001" />
     <meta property="og:description" content="¡Encuentra el emprendimiento que estabas buscando!" />
     <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/5246c329-2c70-4185-b4aa-2433ee9d7e59.png" />
     <meta property="og:image:height" content="630" />
@@ -322,7 +322,7 @@
                   >
                     <img
                       class="img-fluid"
-                      src="https://www.emprendeadvisor.com/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
+                      src="http://18.205.29.39:5001/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
                       alt=""
                     />
                   </a>
