--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:title" content="EmprendeAdvisor" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.emprendeadvisor.com" />
+    <meta property="og:url" content="http://18.205.29.39:5001" />
     <meta property="og:description" content="¡Encuentra el emprendimiento que estabas buscando!" />
     <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/5246c329-2c70-4185-b4aa-2433ee9d7e59.png" />
     <meta property="og:image:height" content="630" />
@@ -254,6 +254,57 @@
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#register">Registrese</a
                 >
               </p>
+              <p class="mt-2">
+                <a href="#" data-bs-toggle="modal" data-bs-target="#forgot"
+                  >¿Olvido su contraseña?</a
+                >
+              </p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="forgot"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form
+            action="/forgotpassword"
+            method="post"
+            novalidate
+            id="forgotForm"
+          >
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                ¿Olvido la contraseña?
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div
+                class="errorForgot bg-warning text-light rounded-3 text-center"
+              ></div>
+              <div
+                class="successForgot bg-success text-light rounded-3 text-center"
+              ></div>
+              <label for="email" class="form-label">Correo</label>
+              <input type="email" name="email" class="form-control" />
+
+              <button type="submit" class="btn btn-altdark text-light mt-3">
+                Enviar
+              </button>
             </div>
           </form>
         </div>
