--- a/flask_app/templates/resetPassword.html
+++ b/flask_app/templates/resetPassword.html
@@ -293,7 +293,7 @@
                                 >
                                   <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.example.com/" style="height:48px;width:190px;v-text-anchor:middle;" arcsize="34%" stroke="false" fillcolor="#506bec"><w:anchorlock/><v:textbox inset="5px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:15px"><!
                                   [endif]--><a
-                                    href="http://18.205.29.39:5001/resetpassword/{{key}}"
+                                    href="https://www.emprendeadvisor.com/resetpassword/{{key}}"
                                     style="
                                       text-decoration: none;
                                       display: inline-block;
