correct password regex, filter business with category not approved, change welcome msg

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -38,7 +38,7 @@
                     {% if userSession != "" %}
                     <div class="mx-3 d-none d-sm-block d-flex align-items-center">
                         <h5 class="text-light welcomeMsg my-0">
-                            Bienvenido {{userSession.first_name}}
+                            Hola {{userSession.first_name}}
                         </h5>
                     </div>
                     <a class="btn btn-sm btn-secondary text-light" href="/logout">Salir</a
