--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:title" content="EmprendeAdvisor" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.emprendeadvisor.com" />
+    <meta property="og:url" content="http://127.0.0.1" />
     <meta property="og:description" content="¡Encuentra el emprendimiento que estabas buscando!" />
     <meta property="og:image" content="https://emprendeadvisor.s3.amazonaws.com/5246c329-2c70-4185-b4aa-2433ee9d7e59.png" />
     <meta property="og:image:height" content="630" />
