--- a/flask_app/templates/resetPassword.html
+++ b/flask_app/templates/resetPassword.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 
-<html
-  lang="en"
-  xmlns:o="urn:schemas-microsoft-com:office:office"
-  xmlns:v="urn:schemas-microsoft-com:vml"
->
-  <head>
+<html lang="en" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml">
+
+<head>
     <title></title>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -16,124 +13,86 @@
           ><o:AllowPNG /></o:OfficeDocumentSettings></xml
     ><![endif]-->
     <!--[if !mso]><!-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Cabin"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" type="text/css" />
     <!--<![endif]-->
     <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0;
-        padding: 0;
-      }
-
-      a[x-apple-data-detectors] {
-        color: inherit !important;
-        text-decoration: inherit !important;
-      }
-
-      #MessageViewBody a {
-        color: inherit;
-        text-decoration: none;
-      }
-
-      p {
-        line-height: inherit;
-      }
-
-      @media (max-width: 620px) {
-        .icons-inner {
-          text-align: center;
+        * {
+            box-sizing: border-box;
         }
-        .icons-inner td {
-          margin: 0 auto;
+        
+        body {
+            margin: 0;
+            padding: 0;
         }
-        .row-content {
-          width: 100% !important;
+        
+        a[x-apple-data-detectors] {
+            color: inherit !important;
+            text-decoration: inherit !important;
         }
-        .image_block img.big {
-          width: auto !important;
+        
+        #MessageViewBody a {
+            color: inherit;
+            text-decoration: none;
         }
-        .stack .column {
-          width: 100%;
-          display: block;
+        
+        p {
+            line-height: inherit;
         }
-      }
+        
+        @media (max-width: 620px) {
+            .icons-inner {
+                text-align: center;
+            }
+            .icons-inner td {
+                margin: 0 auto;
+            }
+            .row-content {
+                width: 100% !important;
+            }
+            .image_block img.big {
+                width: auto !important;
+            }
+            .stack .column {
+                width: 100%;
+                display: block;
+            }
+        }
     </style>
-  </head>
+</head>
 
-  <body
-    style="
+<body style="
       background-color: #d9dffa;
       margin: 0;
       padding: 0;
       -webkit-text-size-adjust: none;
       text-size-adjust: none;
-    "
-  >
-    <table
-      border="0"
-      cellpadding="0"
-      cellspacing="0"
-      class="nl-container"
-      role="presentation"
-      style="
+    ">
+    <table border="0" cellpadding="0" cellspacing="0" class="nl-container" role="presentation" style="
         mso-table-lspace: 0pt;
         mso-table-rspace: 0pt;
         background-color: #d9dffa;
-      "
-      width="100%"
-    >
-      <tbody>
-        <tr>
-          <td>
-            <table
-              align="center"
-              border="0"
-              cellpadding="0"
-              cellspacing="0"
-              class="row row-1"
-              role="presentation"
-              style="
+      " width="100%">
+        <tbody>
+            <tr>
+                <td>
+                    <table align="center" border="0" cellpadding="0" cellspacing="0" class="row row-1" role="presentation" style="
                 mso-table-lspace: 0pt;
                 mso-table-rspace: 0pt;
                 background-color: #cfd6f4;
-              "
-              width="100%"
-            >
-              <tbody>
-                <tr>
-                  <td>
-                    <table
-                      align="center"
-                      border="0"
-                      cellpadding="0"
-                      cellspacing="0"
-                      class="row-content stack"
-                      role="presentation"
-                      style="
+              " width="100%">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="
                         mso-table-lspace: 0pt;
                         mso-table-rspace: 0pt;
                         color: #000000;
                         width: 600px;
-                      "
-                      width="600"
-                    >
-                      <tbody>
-                        <tr>
-                          <td
-                            class="column"
-                            style="
+                      " width="600">
+                                        <tbody>
+                                            <tr>
+                                                <td class="column" style="
                               mso-table-lspace: 0pt;
                               mso-table-rspace: 0pt;
                               font-weight: 400;
@@ -145,96 +104,57 @@
                               border-right: 0px;
                               border-bottom: 0px;
                               border-left: 0px;
-                            "
-                            width="100%"
-                          >
-                            <table
-                              border="0"
-                              cellpadding="0"
-                              cellspacing="0"
-                              class="image_block"
-                              role="presentation"
-                              style="
+                            " width="100%">
+                                                    <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="
                                 mso-table-lspace: 0pt;
                                 mso-table-rspace: 0pt;
-                              "
-                              width="100%"
-                            >
-                              <tr>
-                                <td
-                                  style="
+                              " width="100%">
+                                                        <tr>
+                                                            <td style="
                                     width: 100%;
                                     padding-right: 0px;
                                     padding-left: 0px;
-                                  "
-                                >
-                                  <div align="center" style="line-height: 10px">
-                                    <img
-                                      alt="Card Header with Border and Shadow Animated"
-                                      class="big"
-                                      src="https://emprendeadvisor.s3.amazonaws.com/animated_header.gif"
-                                      style="
+                                  ">
+                                                                <div align="center" style="line-height: 10px">
+                                                                    <img alt="Card Header with Border and Shadow Animated" class="big" src="https://emprendeadvisor.s3.amazonaws.com/animated_header.gif" style="
                                         display: block;
                                         height: auto;
                                         border: 0;
                                         width: 600px;
                                         max-width: 100%;
-                                      "
-                                      title="Card Header with Border and Shadow Animated"
-                                      width="600"
-                                    />
-                                  </div>
+                                      " title="Card Header with Border and Shadow Animated" width="600" />
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </td>
-                              </tr>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
+                            </tr>
+                        </tbody>
                     </table>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <table
-              align="center"
-              border="0"
-              cellpadding="0"
-              cellspacing="0"
-              class="row row-2"
-              role="presentation"
-              style="
+                    <table align="center" border="0" cellpadding="0" cellspacing="0" class="row row-2" role="presentation" style="
                 mso-table-lspace: 0pt;
                 mso-table-rspace: 0pt;
                 background-color: #d9dffa;
                 background-image: url('https://emprendeadvisor.s3.amazonaws.com/body_background_2.png');
                 background-position: top center;
                 background-repeat: repeat;
-              "
-              width="100%"
-            >
-              <tbody>
-                <tr>
-                  <td>
-                    <table
-                      align="center"
-                      border="0"
-                      cellpadding="0"
-                      cellspacing="0"
-                      class="row-content stack"
-                      role="presentation"
-                      style="
+              " width="100%">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content stack" role="presentation" style="
                         mso-table-lspace: 0pt;
                         mso-table-rspace: 0pt;
                         color: #000000;
                         width: 600px;
-                      "
-                      width="600"
-                    >
-                      <tbody>
-                        <tr>
-                          <td
-                            class="column"
-                            style="
+                      " width="600">
+                                        <tbody>
+                                            <tr>
+                                                <td class="column" style="
                               mso-table-lspace: 0pt;
                               mso-table-rspace: 0pt;
                               font-weight: 400;
@@ -248,38 +168,25 @@
                               border-right: 0px;
                               border-bottom: 0px;
                               border-left: 0px;
-                            "
-                            width="100%"
-                          >
-                            <table
-                              border="0"
-                              cellpadding="10"
-                              cellspacing="0"
-                              class="text_block"
-                              role="presentation"
-                              style="
+                            " width="100%">
+                                                    <table border="0" cellpadding="10" cellspacing="0" class="text_block" role="presentation" style="
                                 mso-table-lspace: 0pt;
                                 mso-table-rspace: 0pt;
                                 word-break: break-word;
-                              "
-                              width="100%"
-                            >
-                              <tr>
-                                <td>
-                                  <div style="font-family: sans-serif">
-                                    <div
-                                      style="
+                              " width="100%">
+                                                        <tr>
+                                                            <td>
+                                                                <div style="font-family: sans-serif">
+                                                                    <div style="
                                         font-size: 14px;
                                         mso-line-height-alt: 16.8px;
                                         color: #506bec;
                                         line-height: 1.2;
                                         font-family: Helvetica Neue, Helvetica,
                                           Arial, sans-serif;
-                                      "
-                                    >
-                                      <p style="margin: 0; font-size: 14px">
-                                        <strong
-                                          ><span style="font-size: 38px"
+                                      ">
+                                                                        <p style="margin: 0; font-size: 14px">
+                                                                            <strong><span style="font-size: 38px"
                                             >¿Olvidaste tu clave?</span
                                           ></strong
                                         >
